--------------------------------------------------------------------------------
  v2.0.x - (current release)
--------------------------------------------------------------------------------	
Notes:

Changes:
2007-03-02 Vincent Acary <vincent,acary@inrialpes.fr>
                                                                               
	* lcp_solver : Modification of the convergence criteria
	
--------------------------------------------------------------------------------
  v2.0.1 - 14 Decembre 2006 (release 626)
--------------------------------------------------------------------------------	
Notes:

Main Changes:

--------------------------------------------------------------------------------
  v2.0.0 - 30 Novembre 2006
--------------------------------------------------------------------------------	
Notes:

Main Changes:
2006-10-09 Franck Perignon <franck.perignon@inrialpes.fr>
                                                                               
	* Remove lemke routines and keep only lexicoLemke
	
--------------------------------------------------------------------------------
  v1.3.0 - 07 september 2006 (release 567)
--------------------------------------------------------------------------------	
Notes:

Changes:

2006-09-07 Pascal Denoyelle <pascal.denoyelle@inrialpes.fr>
                                                                               
	* Add LCP solver for block matrices
	* Review convergence criteria for LCP solvers
	
--------------------------------------------------------------------------------
  v1.2.0 - (release 508)
--------------------------------------------------------------------------------	
Notes:

Changes:

2006-03-24 Vincent Acary <vincent.acary@inrialpes.fr>
                                                                               
	* INSTALL, src/Makefile.am, src/dummy.cpp
	  First draft of a linking strategy on MacOsX

2006-03-22 Vincent Acary <vincent.acary@inrialpes.fr>