@@ -33,7 +33,7 @@ LCP_SOURCES = lcp_solver.c lcp_solver_block_new.c \
 	filter_result_LCP.c filter_result_LCP_block.c \
 	lcp_compute_error.c $(LCP_SOLVERS)
 
-LCP_SOLVERS = lcp_lexicolemke.c lcp_nlgs.c lcp_nsqp.c lcp_cpg.c \
+LCP_SOLVERS = lcp_lexicolemke.c lcp_pgs.c lcp_nsqp.c lcp_cpg.c \
 	lcp_qp.c lcp_latin.c lcp_latin_w.c lcp_newton_min.c \
 	lcp_newton_FB.c lcp_sor.c
 
