@@ -68,10 +68,11 @@
 int lcp_solver(double *vec, double *q , int *n , method *pt , double *z , double *w)
 {
 
-  const char lcpkey1[10] = "Lemke", lcpkey2[10] = "NLGS", lcpkey3[10] = "CPG";
+  const char lcpkey1[10] = "Lemke", lcpkey2[10] = "PGS", lcpkey3[10] = "CPG";
   const char lcpkey4[10] = "Latin", lcpkey5[10] = "QP", lcpkey6[10] = "NSQP";
   const char lcpkey7[15] = "LexicoLemke", lcpkey8[15] = "NewtonMin";
   const char lcpkey9[15] = "Latin_w", lcpkey10[15] = "NewtonFB", lcpkey11[15] = "SOR";
+  const char lcpkey12[10] = "NLGS";
 
   // Remark: Lemke = LexicoLemke. Only one solver is called: lexicoLemke.
 
@@ -159,10 +160,16 @@ int lcp_solver(double *vec, double *q , int *n , method *pt , double *z , double
     dparamLCP[0] = pt->lcp.tol;
     /* dparamLCP[1] = pt->lcp.relax;*/
 
-    lcp_nlgs(n , vec , q , z , w , &info , iparamLCP , dparamLCP);
+    lcp_pgs(n , vec , q , z , w , &info , iparamLCP , dparamLCP);
 
     pt->lcp.iter = iparamLCP[2];
     pt->lcp.err  = dparamLCP[2];
+
+  }
+  else if (strcmp(pt->lcp.name , lcpkey12) == 0)
+  {
+
+    printf("Warning: NLGS method is obsolete. Use PGS instead.\n");
 
   }
   /* **** SOR Solver **** */
